@@ -30,7 +30,10 @@
           stream-of stream-range stream-ref stream-reverse stream-scan stream-take
           stream-take-while stream-unfold stream-unfolds stream-zip)
 
-  (import (rnrs) (srfi :41 streams primitive))
+  (import 
+   (rnrs)
+;(only (rnrs) define-syntax syntax-rules define ... lambda syntax-case syntax and identifier? free-identifier=? if not list? error quote null? car cdr let input-port? current-input-port eof-object? read-char cond integer? negative? else or zero? cons - = length cadr exists apply append list procedure? begin map number? + < > pair? values list-ref call-with-values)
+          (srfi :41 streams primitive))
 
   (define-syntax define-stream
     (syntax-rules ()
